Translate command-mode-reference.adoc

--- a/i18n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/i18n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -2,83 +2,68 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-18 23:43+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/command-mode-reference.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Command Mode Applications"
 msgstr "Quarkus - コマンドモードアプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:11
-#, fuzzy
-msgid ""
-"This reference covers how to write applications that run and then exit."
+msgid "This reference covers how to write applications that run and then exit."
 msgstr "このリファレンスでは、実行して終了するアプリケーションの書き方について説明しています。"
 
 #. type: Title ==
 #: upstream/_guides/command-mode-reference.adoc:12
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Writing Command Mode Applications"
-msgstr "コマンドモードアプリケーションの記述"
+msgstr "コマンドモードアプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:16
-#, fuzzy
-msgid ""
-"There are two different approaches that can be used to implement "
-"applications that exit."
+msgid "There are two different approaches that can be used to implement applications that exit."
 msgstr "終了するアプリケーションを実装するためには、2つの異なるアプローチがあります。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:18
-#, fuzzy
-msgid ""
-"Implement `QuarkusApplication` and have Quarkus run this method "
-"automatically"
+msgid "Implement `QuarkusApplication` and have Quarkus run this method automatically"
 msgstr "`QuarkusApplication` を実装し、Quarkusがこのメソッドを自動的に実行するようにします。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:19
-#, fuzzy
-msgid ""
-"Implement `QuarkusApplication` and a Java main method, and use the Java main "
-"method to launch Quarkus"
-msgstr "`QuarkusApplication` とJavaメインメソッドを実装し、Javaメインメソッドを使用してQuarkusを起動します。"
+msgid "Implement `QuarkusApplication` and a Java main method, and use the Java main method to launch Quarkus"
+msgstr "`QuarkusApplication` とJava mainメソッドを実装し、Java mainメソッドを使用してQuarkusを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:22
-#, fuzzy
 msgid ""
-"In this document the `QuarkusApplication` instance is referred to as the "
-"application main, and a class with a Java main method is the Java main."
+"In this document the `QuarkusApplication` instance is referred to as the application main, and a class with a Java main "
+"method is the Java main."
 msgstr ""
-"このドキュメントでは、 `QuarkusApplication` インスタンスをアプリケーション・メインと呼び、Java メイン・メソッドを持つクラスを "
-"Java メインと呼びます。"
+"このドキュメントでは、 `QuarkusApplication` インスタンスをアプリケーション mainと呼び、Java mainメソッドを持つクラスを "
+"Java mainと呼びます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:24
-#, fuzzy
-msgid ""
-"The simplest possible command mode application with access to Quarkus API's "
-"might appear as follows:"
-msgstr "QuarkusのAPIにアクセスできる最もシンプルなコマンドモードのアプリケーションは、以下のように表示されます。"
+msgid "The simplest possible command mode application with access to Quarkus API's might appear as follows:"
+msgstr "QuarkusのAPIにアクセスできる最もシンプルなコマンドモードのアプリケーションは、以下のようになります："
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:29
@@ -104,60 +89,49 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:41
-#, fuzzy
 msgid ""
-"<.> The `@QuarkusMain` annotation tells Quarkus that this is the main entry "
-"point.  <.> The `run` method is invoked once Quarkus starts, and the "
-"application stops when it finishes."
+"<.> The `@QuarkusMain` annotation tells Quarkus that this is the main entry point.  <.> The `run` method is invoked once "
+"Quarkus starts, and the application stops when it finishes."
 msgstr ""
-"<li> <p> `@QuarkusMain` アノテーションは、これがメインのエントリーポイントであることをQuarkusに伝えます。 &lt;."
-"&gt; `run` メソッドは、Quarkusが起動すると呼び出され、終了するとアプリケーションが停止します。</p> </li>"
+"<.> `@QuarkusMain` アノテーションは、これがメインのエントリーポイントであることをQuarkusに伝えます。  <.> `run` メソッド"
+"は、Quarkusが起動すると呼び出され、終了するとアプリケーションが停止します。"
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:42
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Contexts"
 msgstr "コンテキスト"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:46
-#, fuzzy
 msgid ""
-"To get access to your application beans and services, be aware that a "
-"`@QuarkusMain` instance is an application scoped bean by default. It has "
-"access to singletons, application and dependent scoped beans. If you want to "
-"interact with beans that requires a request scope put a "
-"`@ActivateRequestContext` on your `run()` method."
+"To get access to your application beans and services, be aware that a `@QuarkusMain` instance is an application scoped "
+"bean by default. It has access to singletons, application and dependent scoped beans. If you want to interact with beans "
+"that requires a request scope put a `@ActivateRequestContext` on your `run()` method."
 msgstr ""
-"アプリケーションビーンやサービスにアクセスするには、 `@QuarkusMain` "
-"インスタンスはデフォルトでアプリケーションスコープされたビーンであることに注意してください。インスタンスは、シングルトン、アプリケーション、従属スコープのビーンへのアクセスを持っています。リクエストスコープを必要とするビーンと対話したい場合は、 "
-"`run()` メソッドに `@ActivateRequestContext` を記述してください。"
+"アプリケーションBeanやサービスにアクセスするために、 `@QuarkusMain` インスタンスはデフォルトでapplicationスコープのBeanであ"
+"ることに注意してください。singleton、application、dependentスコープのBeanへのアクセスを持っています。requestスコープを必要"
+"とするBeanと対話したい場合は、 `run()` メソッドに `@ActivateRequestContext` を記述してください。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:48
-#, fuzzy
 msgid ""
-"This let `run()` have access to methods like `listAll()` and `query*` "
-"methods on a Panache Entity. Without it you will eventually get a "
-"`ContextNotActiveException` when accessing such classes/beans."
+"This let `run()` have access to methods like `listAll()` and `query*` methods on a Panache Entity. Without it you will "
+"eventually get a `ContextNotActiveException` when accessing such classes/beans."
 msgstr ""
-"これにより、 `run()` は Panache Entity 上の `listAll()` や `query*` "
-"のようなメソッドにアクセスできるようになります。これがないと、そのようなクラスやビーンにアクセスするときに、最終的には "
-"`ContextNotActiveException` を取得することになります。"
+"これにより、 `run()` は Panache Entity 上の `listAll()` や `query*` のようなメソッドにアクセスできるようになります。これが"
+"ないと、そのようなクラスやビーンにアクセスするときに、最終的には `ContextNotActiveException` に直面することになります。"
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:49
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Main method"
-msgstr "主な方法"
+msgstr "Mainメソッド"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:51
-#, fuzzy
-msgid ""
-"If we want to use a Java main to run the application main it would look like:"
-""
-msgstr "Javaメインでアプリケーションメインを実行したい場合は以下のようになります。"
+msgid "If we want to use a Java main to run the application main it would look like:"
+msgstr "Java mainでアプリケーション mainを実行したい場合は以下のようになります："
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:56
@@ -170,7 +144,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:59
 #, no-wrap
-msgid "@QuarkusMain\n"
+msgid ""
+"@QuarkusMain\n"
 "public class JavaMain {\n"
 msgstr ""
 
@@ -186,156 +161,132 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:68
-#, fuzzy
 msgid ""
-"This is effectively the same as running the `HelloWorldMain` application "
-"main directly, but has the advantage it can be run from the IDE."
+"This is effectively the same as running the `HelloWorldMain` application main directly, but has the advantage it can be "
+"run from the IDE."
 msgstr ""
-"これは `HelloWorldMain` アプリケーションのメインを直接実行するのと実質的には同じですが、IDE から実行できるという利点があります。"
+"これは `HelloWorldMain` アプリケーション mainを直接実行するのと実質的には同じですが、IDE から実行できるという利点がありま"
+"す。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:70
-#, fuzzy
-msgid ""
-"If a class that implements `QuarkusApplication` and has a Java main then the "
-"Java main will be run."
+msgid "If a class that implements `QuarkusApplication` and has a Java main then the Java main will be run."
 msgstr "`QuarkusApplication` を実装したクラスで Java main がある場合は Java main が実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:75
-#, fuzzy
 msgid ""
-"It is recommended that a Java main perform very little logic, and just "
-"launch the application main. In development mode the Java main will run in a "
-"different ClassLoader to the main application, so may not behave as you "
-"would expect."
+"It is recommended that a Java main perform very little logic, and just launch the application main. In development mode "
+"the Java main will run in a different ClassLoader to the main application, so may not behave as you would expect."
 msgstr ""
-"Javaメインはほとんどロジックを実行せず、アプリケーションのメインを起動するだけにすることをお勧めします。開発モードでは、Javaメインはメインアプリケーションとは異なるClassLoaderで実行されるので、期待通りの動作をしないかもしれません。"
+"Java mainはほとんどロジックを実行せず、アプリケーション mainを起動するだけにすることをお勧めします。開発モードでは、Java "
+"mainはアプリケーション mainとは異なるClassLoaderで実行されるので、期待通りの動作をしないかもしれません。"
 
 #. type: Title ====
 #: upstream/_guides/command-mode-reference.adoc:76
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Multiple Main Methods"
-msgstr "複数の主な方法"
+msgstr "複数のmainメソッド"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:82
-#, fuzzy
 msgid ""
-"It is possible to have multiple main methods in an application, and select "
-"between them at build time.  The `@QuarkusMain` annotation takes an optional "
-"'name' parameter, and this can be used to select the main to run using the "
-"`quarkus.package.main-class` build time configuration option. If you don't "
-"want to use annotations this can also be used to specify the fully qualified "
-"name of a main class."
+"It is possible to have multiple main methods in an application, and select between them at build time.  The `@QuarkusMain` "
+"annotation takes an optional 'name' parameter, and this can be used to select the main to run using the `quarkus.package."
+"main-class` build time configuration option. If you don't want to use annotations this can also be used to specify the "
+"fully qualified name of a main class."
 msgstr ""
-"アプリケーション内に複数のメインメソッドを持ち、ビルド時にそれらの間で選択することが可能です。 `@QuarkusMain` "
-"アノテーションはオプションの 'name' パラメータを取り、 `quarkus.package.main-class` "
-"ビルド時設定オプションを使用して実行するメインを選択するために使用できます。アノテーションを使用したくない場合は、メインクラスの完全修飾名を指定するために使用することもできます。"
+"アプリケーション内に複数のmainメソッドを持ち、ビルド時にそれらの間で選択することが可能です。 `@QuarkusMain` アノテーション"
+"はオプションの 'name' パラメータを取り、 `quarkus.package.main-class` ビルド時設定オプションを使用して実行するmainを選択す"
+"るために使用できます。アノテーションを使用したくない場合は、メインクラスの完全修飾名を指定するために使用することもできま"
+"す。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:86
-#, fuzzy
 msgid ""
-"By default the `@QuarkusMain` with no name (i.e. the empty string) will be "
-"used, and if it is not present and `quarkus.package.main-class` is not "
-"specified then Quarkus will automatically generate a main class that just "
-"runs the application."
+"By default the `@QuarkusMain` with no name (i.e. the empty string) will be used, and if it is not present and `quarkus."
+"package.main-class` is not specified then Quarkus will automatically generate a main class that just runs the application."
 msgstr ""
-"デフォルトでは、名前のない（ `@QuarkusMain` ）（つまり空文字列）が使用され、それが存在せず `quarkus.package.main-"
-"class` が指定されていない場合は、Quarkus はアプリケーションを実行するだけのメインクラスを自動的に生成します。"
+"デフォルトでは、名前のない `@QuarkusMain` （つまり空文字列）が使用され、それが存在せず `quarkus.package.main-class` が指定"
+"されていない場合は、Quarkus はアプリケーションを実行するだけのメインクラスを自動的に生成します。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:90
-#, fuzzy
 msgid ""
-"The `name` of `@QuarkusMain` must be unique (including the default of the "
-"empty string). If you have multiple `@QuarkusMain` annotations in your "
-"application the build will fail if the names are not unique."
+"The `name` of `@QuarkusMain` must be unique (including the default of the empty string). If you have multiple "
+"`@QuarkusMain` annotations in your application the build will fail if the names are not unique."
 msgstr ""
 "`@QuarkusMain` の `name` は一意である必要があります（デフォルトの空文字列を含む）。アプリケーション内に複数の "
 "`@QuarkusMain` アノテーションがある場合、名前が一意でないとビルドに失敗します。"
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:91
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "The command mode lifecycle"
 msgstr "コマンドモードのライフサイクル"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:94
-#, fuzzy
-msgid ""
-"When running a command mode application the basic lifecycle is as follows:"
+msgid "When running a command mode application the basic lifecycle is as follows:"
 msgstr "コマンドモードのアプリケーションを実行する場合、基本的なライフサイクルは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:96
-#, fuzzy
 msgid "Start Quarkus"
-msgstr "Quarkusを開始"
+msgstr "Quarkusを起動"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:97
-#, fuzzy
 msgid "Run the `QuarkusApplication` main method"
-msgstr "`QuarkusApplication` メインメソッドの実行"
+msgstr "`QuarkusApplication` mainメソッドの実行"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:98
-#, fuzzy
 msgid "Shut down Quarkus and exit the JVM after the main method returns"
-msgstr "メインメソッドが戻った後にQuarkusをシャットダウンし、JVMを終了する"
+msgstr "mainメソッドがreturnされた後にQuarkusをシャットダウンし、JVMを終了する"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:102
-#, fuzzy
 msgid ""
-"Shutdown is always initiated by the application main thread returning. If "
-"you want to run some logic on startup, and then run like a normal "
-"application (i.e. not exit) then you should call `Quarkus.waitForExit` from "
-"the main thread (A non-command mode application is essentially just running "
-"an application that just calls `waitForExit`)."
+"Shutdown is always initiated by the application main thread returning. If you want to run some logic on startup, and then "
+"run like a normal application (i.e. not exit) then you should call `Quarkus.waitForExit` from the main thread (A non-"
+"command mode application is essentially just running an application that just calls `waitForExit`)."
 msgstr ""
-"シャットダウンは常にアプリケーションのメインスレッドが戻ることで開始されます。起動時に何らかのロジックを実行して、通常のアプリケーションのように実行したい場合 "
-"(つまり終了しない) は、メインスレッドから `Quarkus.waitForExit` を呼び出す必要があります "
-"(非コマンドモードのアプリケーションは、基本的に `waitForExit` を呼び出すだけのアプリケーションを実行しているだけです)。"
+"シャットダウンは常にアプリケーションのメインスレッドがreturnされることで開始されます。起動時に何らかのロジックを実行して、"
+"通常のアプリケーションのように実行したい場合 (つまり終了しない) は、メインスレッドから `Quarkus.waitForExit` を呼び出す必要"
+"があります (非コマンドモードのアプリケーションは、基本的に `waitForExit` を呼び出すだけのアプリケーションを実行しているだけ"
+"です)。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:105
-#, fuzzy
 msgid ""
-"If you want to shut down a running application and you are not in the main "
-"thread then you should call `Quarkus.asyncExit` in order to unblock the main "
-"thread and initiate the shutdown process."
+"If you want to shut down a running application and you are not in the main thread then you should call `Quarkus.asyncExit` "
+"in order to unblock the main thread and initiate the shutdown process."
 msgstr ""
-"実行中のアプリケーションをシャットダウンしたい場合、メインスレッドにいない場合は、 `Quarkus.asyncExit` "
-"を呼び出してメインスレッドのブロックを解除し、シャットダウン処理を開始する必要があります。"
+"実行中のアプリケーションをシャットダウンしたい場合、メインスレッドにいない場合は、 `Quarkus.asyncExit` を呼び出してメインス"
+"レッドのブロックを解除し、シャットダウン処理を開始する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:106
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Dev mode"
-msgstr "デブモード"
+msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:109
-#, fuzzy
 msgid ""
-"Also for command mode applications the dev mode is supported. When running "
-"`mvn compile quarkus:dev`, the command mode application is executed and on "
-"press of the Enter key, is restarted."
+"Also for command mode applications the dev mode is supported. When running `mvn compile quarkus:dev`, the command mode "
+"application is executed and on press of the Enter key, is restarted."
 msgstr ""
-"また、コマンドモードアプリケーションでは、dev モードにも対応しています。 `mvn compile quarkus:dev` "
-"を実行しているときは、コマンドモードアプリケーションを実行し、Enter キーを押すと再起動します。"
+"また、コマンドモードアプリケーションでは、開発モードにも対応しています。 `mvn compile quarkus:dev` を実行しているときは、コ"
+"マンドモードアプリケーションを実行し、Enter キーを押すと再起動します。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:111
-#, fuzzy
 msgid ""
-"As command mode applications will often require arguments to be passed on "
-"the commandline, this is also possible in dev mode via:"
-msgstr "コマンドモードのアプリケーションでは、コマンドラインで引数を渡す必要があることが多いので、これはdevモードでも可能です。"
+"As command mode applications will often require arguments to be passed on the commandline, this is also possible in dev "
+"mode via:"
+msgstr "コマンドモードのアプリケーションでは、コマンドラインで引数を渡す必要があることが多く、これは開発モードでも可能です："
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:114
@@ -345,9 +296,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:117
-#, fuzzy
 msgid "The same can be achieved with Gradle:"
-msgstr "Gradleでも同じことができます。"
+msgstr "Gradleでも同じことができます："
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:120
