--- a/i18n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/i18n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-18 15:08+0000\n"
 "PO-Revision-Date: 2021-01-18 23:56+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -29,37 +29,47 @@ msgstr "Quarkusでのコンテキスト伝搬"
 #: upstream/_guides/context-propagation.adoc:15
 #, no-wrap
 msgid ""
-"Traditional blocking code uses link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`]\n"
+"Traditional blocking code uses link:https://docs.oracle.com/en/java/javase/"
+"11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`]\n"
 " variables to store contextual objects in order to avoid\n"
-"passing them as parameters everywhere. Many Quarkus extensions require those contextual objects to operate\n"
-"properly: link:rest-json[RESTEasy], link:cdi-reference[ArC] and link:transaction[Transaction]\n"
+"passing them as parameters everywhere. Many Quarkus extensions require those "
+"contextual objects to operate\n"
+"properly: link:rest-json[RESTEasy], link:cdi-reference[ArC] and link:"
+"transaction[Transaction]\n"
 "for example.\n"
-msgstr "従来のブロッキングコードでは  link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`] 変数を使用してコンテキストオブジェクトを格納します。多くのQuarkusエクステンションは、適切に動作するためにこれらのコンテキストオブジェクトを必要とします。例えば、 link:rest-json[RESTEasy]、 link:cdi-reference[ArC]、 link:transaction[Transaction]などです。\n"
+msgstr ""
+"従来のブロッキングコードでは  link:https://docs.oracle.com/en/java/javase/11/docs/api/java."
+"base/java/lang/ThreadLocal.html[`ThreadLocal`] "
+"変数を使用してコンテキストオブジェクトを格納します。多くのQuarkusエクステンションは、適切に動作するためにこれらのコンテキストオブジェクトを必要とします。例えば、 "
+"link:rest-json[RESTEasy]、 link:cdi-reference[ArC]、 link:"
+"transaction[Transaction]などです。\n"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:20
 msgid ""
-"If you write reactive/async code, you have to cut your work into a pipeline of code blocks that get "
-"executed \"later\", and in practice after the method you defined them in have returned. As such, `try/"
-"finally` blocks as well as `ThreadLocal` variables stop working, because your reactive code gets "
+"If you write reactive/async code, you have to cut your work into a pipeline "
+"of code blocks that get executed \"later\", and in practice after the method "
+"you defined them in have returned. As such, `try/finally` blocks as well as "
+"`ThreadLocal` variables stop working, because your reactive code gets "
 "executed in another thread, after the caller ran its `finally` block."
 msgstr ""
-"リアクティブ/非同期コードを書く場合、「後で」実行されるコードブロックのパイプラインに作業を切り 込まなけ"
-"ればならず、実際には、定義したメソッドがreturnされた後に実行されます。そのため、 `try/finally` ブロック"
-"や `ThreadLocal` 変数は動作しなくなります。なぜならば、呼び出し元が `finally` ブロックを実行した後に、 "
+"リアクティブ/非同期コードを書く場合、「後で」実行されるコードブロックのパイプラインに作業を切り "
+"込まなければならず、実際には、定義したメソッドがreturnされた後に実行されます。そのため、 `try/finally` ブロックや "
+"`ThreadLocal` 変数は動作しなくなります。なぜならば、呼び出し元が `finally` ブロックを実行した後に、 "
 "リアクティブコードは別のスレッドで実行されるからです。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:24
 msgid ""
-"link:https://github.com/eclipse/microprofile-context-propagation[MicroProfile Context Propagation] was "
-"made to make those Quarkus extensions work properly in reactive/async settings. It works by capturing "
-"those contextual values that used to be in thread-locals, and restoring them when your code is called."
+"link:https://github.com/eclipse/microprofile-context-"
+"propagation[MicroProfile Context Propagation] was made to make those Quarkus "
+"extensions work properly in reactive/async settings. It works by capturing "
+"those contextual values that used to be in thread-locals, and restoring them "
+"when your code is called."
 msgstr ""
-"link:https://github.com/eclipse/microprofile-context-propagation[MicroProfile Context Propagation] は、"
-"リアクティブ/非同期設定でQuarkusエクステンションが正しく動作するようにするために作られました。これは、ス"
-"レッドローカルにあったコンテキスト値を取得し、コードが呼び出されたときにそれらを復元することで動作しま"
-"す。"
+"link:https://github.com/eclipse/microprofile-context-"
+"propagation[MicroProfile Context Propagation] は、リアクティブ/"
+"非同期設定でQuarkusエクステンションが正しく動作するようにするために作られました。これは、スレッドローカルにあったコンテキスト値を取得し、コードが呼び出されたときにそれらを復元することで動作します。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:25
@@ -70,12 +80,13 @@ msgstr "設定"
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:29
 msgid ""
-"If you are using link:http://smallrye.io/smallrye-mutiny[Mutiny] (the `quarkus-mutiny` extension), you "
-"just need to add the the `quarkus-smallrye-context-propagation` extension to enable context propagation."
+"If you are using link:http://smallrye.io/smallrye-mutiny[Mutiny] (the "
+"`quarkus-mutiny` extension), you just need to add the the `quarkus-smallrye-"
+"context-propagation` extension to enable context propagation."
 msgstr ""
-"link:http://smallrye.io/smallrye-mutiny[Mutiny] ( `quarkus-mutiny` のエクステンション) を使用している場"
-"合は、コンテキストの伝播を有効にするために `quarkus-smallrye-context-propagation` のエクステンションを追"
-"加するだけです。"
+"link:http://smallrye.io/smallrye-mutiny[Mutiny] ( `quarkus-mutiny` "
+"のエクステンション) を使用している場合は、コンテキストの伝播を有効にするために `quarkus-smallrye-context-"
+"propagation` のエクステンションを追加するだけです。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:31
@@ -107,10 +118,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:53
 msgid ""
-"With this, you will get context propagation for ArC, RESTEasy and transactions, if you are using them."
-msgstr ""
-"これにより、ArC、RESTEasy、トランザクションを使用している場合は、コンテキストの伝播を得ることができま"
-"す。"
+"With this, you will get context propagation for ArC, RESTEasy and "
+"transactions, if you are using them."
+msgstr "これにより、ArC、RESTEasy、トランザクションを使用している場合は、コンテキストの伝播を得ることができます。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:54
@@ -127,21 +137,24 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:60
 msgid ""
-"This section uses Mutiny reactive types, if you're not familiar with them, read the link:getting-"
-"started-reactive#mutiny[Getting Started with Reactive guide] first."
+"This section uses Mutiny reactive types, if you're not familiar with them, "
+"read the link:getting-started-reactive#mutiny[Getting Started with Reactive "
+"guide] first."
 msgstr ""
-"このセクションでは、Mutinyのリアクティブタイプ を使用しています。慣れていない場合は、 link:getting-"
-"started-reactive#mutiny[Getting Started with Reactive guide] を先にお読みください。"
+"このセクションでは、Mutinyのリアクティブタイプ を使用しています。慣れていない場合は、 link:getting-started-"
+"reactive#mutiny[Getting Started with Reactive guide] を先にお読みください。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:65
 msgid ""
-"Let's write a REST endpoint that reads the next 3 items from a link:kafka[Kafka topic], stores them in "
-"a database using link:hibernate-orm-panache[Hibernate ORM with Panache] (all in the same transaction) "
-"before returning them to the client, you can do it like this:"
+"Let's write a REST endpoint that reads the next 3 items from a link:"
+"kafka[Kafka topic], stores them in a database using link:hibernate-orm-"
+"panache[Hibernate ORM with Panache] (all in the same transaction) before "
+"returning them to the client, you can do it like this:"
 msgstr ""
-"link:kafka[Kafkaトピック] から次の3つのアイテムを読み込んで、 link:hibernate-orm-panache[Hibernate ORM "
-"with Panache] を使ってデータベースに保存してからクライアントに返すRESTエンドポイントを書いてみましょう："
+"link:kafka[Kafkaトピック] から次の3つのアイテムを読み込んで、 link:hibernate-orm-"
+"panache[Hibernate ORM with Panache] "
+"を使ってデータベースに保存してからクライアントに返すRESTエンドポイントを書いてみましょう："
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:71
@@ -173,7 +186,8 @@ msgid ""
 "                    // thanks to context propagation\n"
 "                    priceEntity.persist();\n"
 "                    return price;\n"
-"                    // the transaction is committed once the stream completes\n"
+"                    // the transaction is committed once the stream "
+"completes\n"
 "                });\n"
 "    }\n"
 msgstr ""
@@ -181,12 +195,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:96
 msgid ""
-"Notice that thanks to Mutiny support for context propagation, this works out of the box.  The 3 items "
-"are persisted using the same transaction and this transaction is committed when the stream completes."
+"Notice that thanks to Mutiny support for context propagation, this works out "
+"of the box.  The 3 items are persisted using the same transaction and this "
+"transaction is committed when the stream completes."
 msgstr ""
-"コンテキストの伝播のための Mutiny サポートのおかげで、これは、そのまま直ぐに動作することに注目してくださ"
-"い。3つのアイテムは同じトランザクションを使用して保持され、このトランザクションはストリームが完了すると"
-"コミットされます。"
+"コンテキストの伝播のための Mutiny "
+"サポートのおかげで、これは、そのまま直ぐに動作することに注目してください。3つのアイテムは同じトランザクションを使用して保持され、このトランザクションはストリームが完了するとコミットされます。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:97
@@ -197,19 +211,23 @@ msgstr "`CompletionStage` の使用例"
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:105
 msgid ""
-"If you are using link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/concurrent/"
-"CompletionStage.html[`CompletionStage`] you need manual context propagation. You can do that by "
-"injecting a `ThreadContext` or `ManagedExecutor` that will propagate every context. For example, here "
-"we use the link:vertx[Vert.x Web Client] to get the list of Star Wars people, then store them in the "
-"database using link:hibernate-orm-panache[Hibernate ORM with Panache] (all in the same transaction) "
-"before returning them to the client as JSON using link:rest-json[Jackson or JSON-B]:"
+"If you are using link:https://docs.oracle.com/en/java/javase/11/docs/api/"
+"java.base/java/util/concurrent/CompletionStage.html[`CompletionStage`] you "
+"need manual context propagation. You can do that by injecting a "
+"`ThreadContext` or `ManagedExecutor` that will propagate every context. For "
+"example, here we use the link:vertx[Vert.x Web Client] to get the list of "
+"Star Wars people, then store them in the database using link:hibernate-orm-"
+"panache[Hibernate ORM with Panache] (all in the same transaction) before "
+"returning them to the client as JSON using link:rest-json[Jackson or JSON-B]:"
+""
 msgstr ""
-"link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/concurrent/CompletionStage."
-"html[`CompletionStage`]を使用する場合、手動でコンテキストを伝播させる必要があります。 `ThreadContext` "
-"や `ManagedExecutor` を注入することで、すべてのコンテキストを伝播させることができます。例えば、ここでは "
-"link:vertx[Vert.x Web Client] を使用してスターウォーズの登場人物のリストを取得し、 link:hibernate-orm-"
-"panache[Hibernate ORM with Panache を]使用して(全て同じトランザクション内で) データベースに保存します。"
-"その後、 link:rest-json[Jackson または JSON-B] を使用して JSON としてクライアントに返します："
+"link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/"
+"concurrent/CompletionStage."
+"html[`CompletionStage`]を使用する場合、手動でコンテキストを伝播させる必要があります。 `ThreadContext` や "
+"`ManagedExecutor` を注入することで、すべてのコンテキストを伝播させることができます。例えば、ここでは link:vertx[Vert."
+"x Web Client] を使用してスターウォーズの登場人物のリストを取得し、 link:hibernate-orm-"
+"panache[Hibernate ORM with Panache を]使用して(全て同じトランザクション内で) データベースに保存します。その後、 "
+"link:rest-json[Jackson または JSON-B] を使用して JSON としてクライアントに返します："
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:111
@@ -235,15 +253,19 @@ msgid ""
 "                          .setDefaultPort(443)\n"
 "                          .setSsl(true));\n"
 "        // get the list of Star Wars people, with context capture\n"
-"        return threadContext.withContextCapture(client.get(\"/api/people/\").send())\n"
+"        return threadContext.withContextCapture(client.get(\"/api/people/\")."
+"send())\n"
 "                .thenApplyAsync(response -> {\n"
 "                    JsonObject json = response.bodyAsJsonObject();\n"
-"                    List<Person> persons = new ArrayList<>(json.getInteger(\"count\"));\n"
+"                    List<Person> persons = new ArrayList<>(json."
+"getInteger(\"count\"));\n"
 "                    // Store them in the DB\n"
-"                    // Note that we're still in the same transaction as the outer method\n"
+"                    // Note that we're still in the same transaction as the "
+"outer method\n"
 "                    for (Object element : json.getJsonArray(\"results\")) {\n"
 "                        Person person = new Person();\n"
-"                        person.name = ((JsonObject) element).getString(\"name\");\n"
+"                        person.name = ((JsonObject) element)."
+"getString(\"name\");\n"
 "                        person.persist();\n"
 "                        persons.add(person);\n"
 "                    }\n"
@@ -255,11 +277,11 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:142
 msgid ""
-"Using `ThreadContext` or `ManagedExecutor` you can wrap most useful functional types and "
-"`CompletionStage` in order to get context propagated."
+"Using `ThreadContext` or `ManagedExecutor` you can wrap most useful "
+"functional types and `CompletionStage` in order to get context propagated."
 msgstr ""
-"`ThreadContext` または `ManagedExecutor` を使用することで、ほとんどの有用な関数型と `CompletionStage` を"
-"ラップしてコンテキストを伝播させることができます。"
+"`ThreadContext` または `ManagedExecutor` を使用することで、ほとんどの有用な関数型と "
+"`CompletionStage` をラップしてコンテキストを伝播させることができます。"
 
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:146
@@ -285,10 +307,12 @@ msgid ""
 "    <!-- Automatic context propagation for RxJava2 -->\n"
 "    <dependency>\n"
 "        <groupId>io.smallrye</groupId>\n"
-"        <artifactId>smallrye-context-propagation-propagators-rxjava2</artifactId>\n"
+"        <artifactId>smallrye-context-propagation-propagators-rxjava2</"
+"artifactId>\n"
 "    </dependency>\n"
 "    <!-- \n"
-"    Required if you want transactions extended to the end of methods returning\n"
+"    Required if you want transactions extended to the end of methods "
+"returning\n"
 "    an RxJava2 type.\n"
 "     -->\n"
 "    <dependency>\n"
@@ -312,42 +336,44 @@ msgstr "CDIのためのコンテキスト伝搬"
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:180
 msgid ""
-"In terms of CDI, `@RequestScoped`, `@ApplicationScoped` and `@Singleton` beans get propagated and are "
-"available in other threads.  `@Dependent` beans as well as any custom scoped beans cannot be "
-"automatically propagated via CDI Context Propagation."
+"In terms of CDI, `@RequestScoped`, `@ApplicationScoped` and `@Singleton` "
+"beans get propagated and are available in other threads.  `@Dependent` beans "
+"as well as any custom scoped beans cannot be automatically propagated via "
+"CDI Context Propagation."
 msgstr ""
-"CDI の観点からは、 `@RequestScoped`, `@ApplicationScoped`, `@Singleton` Beanは伝播され、他のスレッドで利"
-"用可能です。 `@Dependent` ビーンやカスタムスコープされたビーンは、CDI コンテキスト伝播を介して自動的に伝"
-"播されることはありません。"
+"CDI の観点からは、 `@RequestScoped`, `@ApplicationScoped`, `@Singleton` "
+"Beanは伝播され、他のスレッドで利用可能です。 `@Dependent` ビーンやカスタムスコープされたビーンは、CDI "
+"コンテキスト伝播を介して自動的に伝播されることはありません。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:187
 msgid ""
-"`@ApplicationScoped` and `@Singleton` beans are always active scopes and as such are easy to deal with "
-"- context propagation tasks can work with those beans so long as the CDI container is running.  "
-"However, `@RequestScoped` beans are a different story. They are only active for a short period of time "
-"which can be bound either to HTTP request or some other request/task when manually activated/"
-"deactivated.  In this case user must be aware that once the original thread gets to an end of a "
-"request, it will terminate the context, calling `@PreDestroy` on those beans and then clearing them "
-"from the context.  Subsequent attempts to access those beans from other threads can result in "
-"unexpected behaviour.  It is therefore recommended to make sure all tasks using request scoped beans "
-"via context propagation are performed in such a manner that they don't outlive the original request "
+"`@ApplicationScoped` and `@Singleton` beans are always active scopes and as "
+"such are easy to deal with - context propagation tasks can work with those "
+"beans so long as the CDI container is running.  However, `@RequestScoped` "
+"beans are a different story. They are only active for a short period of time "
+"which can be bound either to HTTP request or some other request/task when "
+"manually activated/deactivated.  In this case user must be aware that once "
+"the original thread gets to an end of a request, it will terminate the "
+"context, calling `@PreDestroy` on those beans and then clearing them from "
+"the context.  Subsequent attempts to access those beans from other threads "
+"can result in unexpected behaviour.  It is therefore recommended to make "
+"sure all tasks using request scoped beans via context propagation are "
+"performed in such a manner that they don't outlive the original request "
 "duration."
 msgstr ""
-"`@ApplicationScoped` と `@Singleton` のBeanは常にアクティブなスコープであり、そのため対処が簡単です - コ"
-"ンテキスト伝播タスクは、CDI コンテナが動作している限り、これらのBeanで動作します。しかし、 "
-"`@RequestScoped` Beanは話が違います。手動で有効化/無効化すると、HTTP リクエストや他のリクエスト/タスクに"
-"バインドされます。この場合、元のスレッドがリクエストの終了に到達すると、コンテキストを終了し、それらの"
-"Beanで `@PreDestroy` を呼び出し、コンテキストからクリアされることに注意しなければなりません。その後、他"
-"のスレッドからこれらのBeanにアクセスしようとすると、予期せぬ動作をすることがあります。したがって、コンテ"
-"キストの伝播を介してリクエストスコープされたBeanを使用するすべてのタスクは、元のリクエストの持続時間を超"
-"えないような方法で実行されることを確認することが推奨されます。"
+"`@ApplicationScoped` と `@Singleton` のBeanは常にアクティブなスコープであり、そのため対処が簡単です - "
+"コンテキスト伝播タスクは、CDI コンテナが動作している限り、これらのBeanで動作します。しかし、 `@RequestScoped` "
+"Beanは話が違います。手動で有効化/無効化すると、HTTP リクエストや他のリクエスト/"
+"タスクにバインドされます。この場合、元のスレッドがリクエストの終了に到達すると、コンテキストを終了し、それらのBeanで `@PreDestroy` "
+"を呼び出し、コンテキストからクリアされることに注意しなければなりません。その後、他のスレッドからこれらのBeanにアクセスしようとすると、予期せぬ動作をすることがあります。したがって、コンテキストの伝播を介してリクエストスコープされたBeanを使用するすべてのタスクは、元のリクエストの持続時間を超えないような方法で実行されることを確認することが推奨されます。"
 
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:192
 msgid ""
-"Due to the above described behavior, it is recommended to avoid using `@PreDestroy` on `@RequestScoped` "
-"beans when working with Context Propagation in CDI."
+"Due to the above described behavior, it is recommended to avoid using "
+"`@PreDestroy` on `@RequestScoped` beans when working with Context "
+"Propagation in CDI."
 msgstr ""
-"上記で説明した動作のため、CDI で Context Propagation を使用する際には `@PreDestroy` を `@RequestScoped` "
-"Beanで使用しないことをお勧めします。"
+"上記で説明した動作のため、CDI で Context Propagation を使用する際には `@PreDestroy` を "
+"`@RequestScoped` Beanで使用しないことをお勧めします。"
