Add machine translations

--- a/i18n/po/ja_JP/_posts/2021-01-18-getting-started-kafka.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-18-getting-started-kafka.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2021-01-18-getting-started-kafka.adoc:1
 #, no-wrap, fuzzy
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-18-getting-started-kafka.adoc:8
