--- a/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
@@ -2,7 +2,7 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:7
-#, no-wrap
+#, no-wrap, fuzzy
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.3.0 released!'\n"
@@ -33,28 +33,40 @@ msgid ""
 "author: jeffmaury\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus Tools for IntelliJ 1.3.0 released!\n"
+"date: 2021-01-15\n"
+"tags: announcement ide\n"
+"author: jeffmaury\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:12
+#, fuzzy
 msgid ""
 "We are very pleased to announce the 1.3.0 release of Quarkus Tools for "
 "IntelliJ.  This release brings codestarts support in the Quarkus project "
 "wizard."
 msgstr ""
+"Quarkus Tools for IntelliJの1.3."
+"0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが追加されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:13
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Codestarts"
-msgstr ""
+msgstr "コードスターツ"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:17
+#, fuzzy
 msgid ""
-"The Quarkus project wizard adds a new codestarts option, allowing to "
-"enable/disable codestarts generation for Quarkus extensions that support "
-"this feature."
+"The Quarkus project wizard adds a new codestarts option, allowing to enable/"
+"disable codestarts generation for Quarkus extensions that support this "
+"feature."
 msgstr ""
+"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機能をサポートするQuarkus拡張機能のcodestarts生成を有効/"
+"無効にすることができるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:18
@@ -64,34 +76,42 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:21
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Moving Forward"
-msgstr ""
+msgstr "前進"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:25
+#, fuzzy
 msgid ""
 "If you have any questions, suggestions or feedback, by all means please "
 "https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
 msgstr ""
+"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-"
+"quarkus/issues[問題を開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:27
+#, fuzzy
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr ""
+msgstr "お読みいただきありがとうございました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:28
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr ""
+#, fuzzy
+msgid ""
+"GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
+msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr ""
+#, fuzzy
+msgid ""
+"Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgstr "課題を開く: https://github.com/redhat-developer/intellij-quarkus/issues"
