--- a/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
@@ -2,29 +2,29 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-01-18 12:36+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-19 23:27+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:1
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:7
-#, no-wrap, fuzzy
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.3.0 released!'\n"
@@ -34,7 +34,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Tools for IntelliJ 1.3.0 released!\n"
+"title: 'Quarkus Tools for IntelliJ 1.3.0 がリリースされました！'\n"
 "date: 2021-01-15\n"
 "tags: announcement ide\n"
 "author: jeffmaury\n"
@@ -42,76 +42,74 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:12
-#, fuzzy
 msgid ""
 "We are very pleased to announce the 1.3.0 release of Quarkus Tools for "
 "IntelliJ.  This release brings codestarts support in the Quarkus project "
 "wizard."
 msgstr ""
-"Quarkus Tools for IntelliJの1.3."
-"0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが追加されました。"
+"Quarkus Tools for IntelliJの1.3.0リリースを発表できることを大変嬉しく思いま"
+"す。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが"
+"追加されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:13
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Codestarts"
-msgstr "コードスターツ"
+msgstr "Codestarts"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:17
-#, fuzzy
 msgid ""
 "The Quarkus project wizard adds a new codestarts option, allowing to enable/"
 "disable codestarts generation for Quarkus extensions that support this "
 "feature."
 msgstr ""
-"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機能をサポートするQuarkus拡張機能のcodestarts生成を有効/"
-"無効にすることができるようになりました。"
+"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機"
+"能をサポートするQuarkusエクステンションのcodestarts生成を有効/無効にすること"
+"ができるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:18
 #, no-wrap
 msgid "quarkus-tools1.png"
-msgstr ""
+msgstr "quarkus-tools1.png"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:21
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Moving Forward"
-msgstr "前進"
+msgstr "将来"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:25
-#, fuzzy
 msgid ""
 "If you have any questions, suggestions or feedback, by all means please "
 "https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
 msgstr ""
-"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-"
-"quarkus/issues[問題を開いて]ください。"
+"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/"
+"redhat-developer/intellij-quarkus/issues[イシューを開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:27
-#, fuzzy
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr "お読みいただきありがとうございました。"
+msgstr "お読みいただきありがとうございました。次のリリースをお待ちください！"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:28
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Links"
 msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-#, fuzzy
 msgid ""
 "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
+msgstr ""
+"GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
-#, fuzzy
 msgid ""
 "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr "課題を開く: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgstr ""
+"Issueを開く: https://github.com/redhat-developer/intellij-quarkus/issues"
