--- a/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-01-18 12:36+0000\n"
+"POT-Creation-Date: 2021-01-19 15:06+0000\n"
 "PO-Revision-Date: 2021-01-19 23:27+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
@@ -47,9 +47,8 @@ msgid ""
 "IntelliJ.  This release brings codestarts support in the Quarkus project "
 "wizard."
 msgstr ""
-"Quarkus Tools for IntelliJの1.3.0リリースを発表できることを大変嬉しく思いま"
-"す。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが"
-"追加されました。"
+"Quarkus Tools for IntelliJの1.3."
+"0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードにcodestartsのサポートが追加されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:13
@@ -64,9 +63,8 @@ msgid ""
 "disable codestarts generation for Quarkus extensions that support this "
 "feature."
 msgstr ""
-"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機"
-"能をサポートするQuarkusエクステンションのcodestarts生成を有効/無効にすること"
-"ができるようになりました。"
+"Quarkusプロジェクトウィザードに新しいcodestartsオプションが追加され、この機能をサポートするQuarkusエクステンションのcodestarts生成を有効/"
+"無効にすることができるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:18
@@ -86,8 +84,8 @@ msgid ""
 "If you have any questions, suggestions or feedback, by all means please "
 "https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
 msgstr ""
-"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/"
-"redhat-developer/intellij-quarkus/issues[イシューを開いて]ください。"
+"ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-"
+"quarkus/issues[イシューを開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:27
@@ -104,12 +102,10 @@ msgstr "リンク"
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
 msgid ""
 "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
-msgstr ""
-"GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
+msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-15-intellij-quarkus-tools-1.3.0.adoc:31
 msgid ""
 "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr ""
-"Issueを開く: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgstr "Issueを開く: https://github.com/redhat-developer/intellij-quarkus/issues"
