Translate jgit.adoc and misc.

--- a/i18n/po/ja_JP/_guides/jgit.adoc.po
+++ b/i18n/po/ja_JP/_guides/jgit.adoc.po
@@ -2,32 +2,32 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-20 00:42+0900\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: ja_JP\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/jgit.adoc:6
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - JGit"
 msgstr "Quarkus - JGit"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:13
-#, fuzzy
 msgid ""
 "Quarkus includes the `jgit` extension which enables the use of https://www."
 "eclipse.org/jgit/[Eclipse JGit] in native mode."
@@ -37,20 +37,19 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/jgit.adoc:14
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Configuration"
-msgstr "構成"
+msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:18
-#, fuzzy
 msgid ""
 "Once you have your Quarkus project configured you can add the `jgit` "
 "extension to your project by running the following command in your project "
 "base directory."
 msgstr ""
-"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `jgit` "
-"エクステンションをプロジェクトに追加できます。"
+"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマン"
+"ドを実行して、 `jgit` エクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:22
@@ -60,9 +59,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:25
-#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr "これにより、 `pom.xml`."
+msgstr "これにより、 `pom.xml` に以下が追加されます："
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:32
@@ -76,21 +74,20 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/jgit.adoc:34
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Usage"
 msgstr "使用方法"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:38
-#, fuzzy
 msgid ""
 "The https://wiki.eclipse.org/JGit/User_Guide#API[JGit] dependency is "
 "resolved transitively when the extension is added to your project.  Here is "
 "an example using it in a JAX-RS endpoint:"
 msgstr ""
-"link:https://wiki.eclipse.org/JGit/"
-"User_Guide#API[JGit]依存関係は、エクステンションがプロジェクトに追加されたときにトランジット的に解決されます。ここでは、JAX-RS "
-"エンドポイントでの使用例を示します。"
+"link:https://wiki.eclipse.org/JGit/User_Guide#API[JGit]依存関係は、エクステン"
+"ションがプロジェクトに追加されたときに推移的に解決されます。ここでは、JAX-RS "
+"エンドポイントでの使用例を示します："
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:50
@@ -99,11 +96,9 @@ msgid ""
 "    @GET\n"
 "    @Path(\"/clone\")\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
-"    public String cloneRepository(@QueryParam(\"url\") String url) throws "
-"Exception {\n"
+"    public String cloneRepository(@QueryParam(\"url\") String url) throws Exception {\n"
 "        File tmpDir = Files.createTempDirectory(\"tmpgit\").toFile();\n"
-"        try (Git git = Git.cloneRepository().setDirectory(tmpDir)."
-"setURI(url).call()) {\n"
+"        try (Git git = Git.cloneRepository().setDirectory(tmpDir).setURI(url).call()) {\n"
 "            return tmpDir.toString();\n"
 "        }\n"
 "    }\n"
@@ -111,10 +106,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/jgit.adoc:56
-#, fuzzy
 msgid ""
 "When running in native mode, make sure that the link:native-and-ssl#the-"
 "truststore-path[SSL access is configured correctly]."
 msgstr ""
 "ネイティブモードで実行する場合は、 link:native-and-ssl#the-truststore-"
-"path[SSLアクセスが正しく設定され]ていることを確認してください。"
+"path[SSLアクセスが正しく設定されていること]を確認してください。"
