--- a/i18n/po/ja_JP/_guides/all-builditems.adoc.po
+++ b/i18n/po/ja_JP/_guides/all-builditems.adoc.po
@@ -2,43 +2,46 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-20 00:40+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:3
-#, no-wrap, fuzzy
-msgid "layout: guides-configuration-reference\n"
+#, no-wrap
+msgid ""
+"layout: guides-configuration-reference\n"
 "---\n"
-msgstr "layout: guides-configuration-reference ---."
+msgstr ""
+"layout: guides-configuration-reference\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_guides/all-builditems.adoc:11
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - Build Items"
-msgstr "クォークス - ビルドアイテム"
+msgstr "Quarkus - ビルドアイテム"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:14
-#, fuzzy
 msgid ""
 "Here you can find a list of Build Items and the extension that provides them:"
-""
-msgstr "ここでは、ビルドアイテムとそれを提供するエクステンションの一覧を見ることができます。"
+msgstr ""
+"ここでは、ビルドアイテムとそれを提供するエクステンションの一覧を見ることがで"
+"きます："
