--- a/i18n/po/ja_JP/_guides/all-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/all-config.adoc.po
@@ -2,38 +2,41 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2020-12-29 14:10+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-01-20 00:39+0900\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/all-config.adoc:1
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/all-config.adoc:3
-#, no-wrap, fuzzy
-msgid "layout: guides-configuration-reference\n"
+#, no-wrap
+msgid ""
+"layout: guides-configuration-reference\n"
 "---\n"
-msgstr "layout: guides-configuration-reference ---."
+msgstr ""
+"layout: guides-configuration-reference\n"
+"---\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/all-config.adoc:9
-#, no-wrap, fuzzy
+#, no-wrap
 msgid "Quarkus - All configuration options"
 msgstr "Quarkus - すべての設定オプション"
