Add machine translations

--- a/i18n/po/ja_JP/_guides/all-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/all-config.adoc.po
@@ -2,18 +2,18 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-20 15:09+0000\n"
 "PO-Revision-Date: 2021-01-20 00:39+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
@@ -25,11 +25,9 @@ msgstr "---\n"
 #. type: Plain text
 #: upstream/_guides/all-config.adoc:3
 #, no-wrap
-msgid ""
-"layout: guides-configuration-reference\n"
+msgid "layout: guides-configuration-reference\n"
 "---\n"
-msgstr ""
-"layout: guides-configuration-reference\n"
+msgstr "layout: guides-configuration-reference\n"
 "---\n"
 
 #. This guide is maintained in the main Quarkus repository
