--- a/i18n/po/ja_JP/_guides/jgit.adoc.po
+++ b/i18n/po/ja_JP/_guides/jgit.adoc.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-12-29 14:10+0900\n"
+"POT-Creation-Date: 2021-01-20 15:08+0000\n"
 "PO-Revision-Date: 2021-01-20 00:42+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: ja_JP\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -48,8 +48,8 @@ msgid ""
 "extension to your project by running the following command in your project "
 "base directory."
 msgstr ""
-"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマン"
-"ドを実行して、 `jgit` エクステンションをプロジェクトに追加できます。"
+"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `jgit` "
+"エクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:22
@@ -85,8 +85,8 @@ msgid ""
 "resolved transitively when the extension is added to your project.  Here is "
 "an example using it in a JAX-RS endpoint:"
 msgstr ""
-"link:https://wiki.eclipse.org/JGit/User_Guide#API[JGit]依存関係は、エクステン"
-"ションがプロジェクトに追加されたときに推移的に解決されます。ここでは、JAX-RS "
+"link:https://wiki.eclipse.org/JGit/"
+"User_Guide#API[JGit]依存関係は、エクステンションがプロジェクトに追加されたときに推移的に解決されます。ここでは、JAX-RS "
 "エンドポイントでの使用例を示します："
 
 #. type: delimited block -
@@ -96,9 +96,11 @@ msgid ""
 "    @GET\n"
 "    @Path(\"/clone\")\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
-"    public String cloneRepository(@QueryParam(\"url\") String url) throws Exception {\n"
+"    public String cloneRepository(@QueryParam(\"url\") String url) throws "
+"Exception {\n"
 "        File tmpDir = Files.createTempDirectory(\"tmpgit\").toFile();\n"
-"        try (Git git = Git.cloneRepository().setDirectory(tmpDir).setURI(url).call()) {\n"
+"        try (Git git = Git.cloneRepository().setDirectory(tmpDir)."
+"setURI(url).call()) {\n"
 "            return tmpDir.toString();\n"
 "        }\n"
 "    }\n"
