--- a/i18n/po/ja_JP/_data/guides.yaml.po
+++ b/i18n/po/ja_JP/_data/guides.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-01-20 11:59+0000\n"
+"POT-Creation-Date: 2021-01-21 15:09+0000\n"
 "PO-Revision-Date: 2021-01-07 21:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2762,6 +2762,27 @@ msgstr "初めてのエクステンションのビルド"
 #, no-wrap
 msgid "building-my-first-extension"
 msgstr "building-my-first-extension"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Discover how to create your first Quarkus application."
+msgid "Learn how to integrate your extension with Quarkus' CDI container."
+msgstr "初めてのQuarkusアプリケーションを作成する方法をご紹介します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Integration"
+msgid "CDI Integration"
+msgstr "統合"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "integration"
+msgid "cdi-integration"
+msgstr "integration"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
