Add machine translations

--- a/i18n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
+++ b/i18n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-01-21 01:47+0000\n"
+"POT-Creation-Date: 2021-01-23 19:31+0000\n"
 "PO-Revision-Date: 2021-01-21 09:12+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -529,9 +529,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc:159
+#, fuzzy
+#| msgid ""
+#| "Notice the use of `@pom` in the first line; that instructs jbang to load the "
+#| "pom for for platform and use it for version management and the other "
+#| "dependency versions can be left out."
 msgid ""
 "Notice the use of `@pom` in the first line; that instructs jbang to load the "
-"pom for for platform and use it for version management and the other "
+"pom for the platform and use it for version management and the other "
 "dependency versions can be left out."
 msgstr ""
 "最初の行で `@pom` を使用していることに注意してください。これは jbang にプラットフォーム用の pom "
