Add machine translations

--- a/i18n/po/ja_JP/_generated-config/config/quarkus-amazon-dynamodb-general-config-items.adoc.po
+++ b/i18n/po/ja_JP/_generated-config/config/quarkus-amazon-dynamodb-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2020-12-29 14:08+0900\n"
+"POT-Creation-Date: 2021-01-27 17:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -160,7 +160,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-amazon-dynamodb-general-config-items.adoc:104
-msgid "Java System Properties - `aws.accessKeyId` and `aws.secretKey`"
+msgid "Java System Properties - `aws.accessKeyId` and `aws.secretAccessKey`"
 msgstr ""
 
 #. type: Table
