--- a/i18n/po/ja_JP/_guides/cache.adoc.po
+++ b/i18n/po/ja_JP/_guides/cache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -154,7 +154,7 @@ msgid ""
 "    -DprojectArtifactId=cache-quickstart \\\n"
 "    -DclassName=\"org.acme.cache.WeatherForecastResource\" \\\n"
 "    -Dpath=\"/weather\" \\\n"
-"    -Dextensions=\"cache,resteasy-jackson\"\n"
+"    -Dextensions=\"resteasy,cache,resteasy-jackson\"\n"
 msgstr ""
 
 #. type: Plain text
