--- a/i18n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/i18n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -162,7 +162,7 @@ msgid ""
 "    -DprojectArtifactId=google-cloud-functions \\\n"
 "    -DclassName=\"org.acme.quickstart.GreetingResource\" \\\n"
 "    -Dpath=\"/hello\" \\\n"
-"    -Dextensions=\"google-cloud-functions\"\n"
+"    -Dextensions=\"resteasy,google-cloud-functions\"\n"
 msgstr ""
 
 #. type: Plain text
