--- a/i18n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/i18n/po/ja_JP/_guides/mongodb.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:08+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -167,8 +167,8 @@ msgid ""
 "    -DprojectArtifactId=mongodb-quickstart \\\n"
 "    -DclassName=\"org.acme.mongodb.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy-jackson,mongodb-client,resteasy-mutiny,context-"
-"propagation\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson,mongodb-client,resteasy-"
+"mutiny,context-propagation\"\n"
 "cd mongodb-quickstart\n"
 msgstr ""
 
