--- a/i18n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -119,7 +119,8 @@ msgid ""
 "    -DprojectArtifactId=security-jwt-quickstart \\\n"
 "    -DclassName=\"org.acme.security.jwt.TokenSecuredResource\" \\\n"
 "    -Dpath=\"/secured\" \\\n"
-"    -Dextensions=\"resteasy-jackson, smallrye-jwt, smallrye-jwt-build\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson,smallrye-jwt,smallrye-jwt-"
+"build\"\n"
 "cd security-jwt-quickstart\n"
 msgstr ""
 
@@ -2007,7 +2008,7 @@ msgstr "SmallRye JWTは、これらすべてのオプションを使用してJWT
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:814
-#, no-wrap, fuzzy
+#, fuzzy, no-wrap
 msgid "Maven dependency"
 msgstr "Maven依存関係"
 
