--- a/i18n/po/ja_JP/_guides/spring-cache.adoc.po
+++ b/i18n/po/ja_JP/_guides/spring-cache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:08+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -112,7 +112,7 @@ msgid ""
 "    -DprojectArtifactId=spring-cache-quickstart \\\n"
 "    -DclassName=\"org.acme.spring.cache.GreeterResource\" \\\n"
 "    -Dpath=\"/greeting\" \\\n"
-"    -Dextensions=\"spring-di,spring-cache\"\n"
+"    -Dextensions=\"resteasy,spring-di,spring-cache\"\n"
 "cd spring-cache-quickstart\n"
 msgstr ""
 
