--- a/i18n/po/ja_JP/_guides/spring-data-jpa.adoc.po
+++ b/i18n/po/ja_JP/_guides/spring-data-jpa.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,7 +131,7 @@ msgid ""
 "    -DprojectArtifactId=spring-data-jpa-quickstart \\\n"
 "    -DclassName=\"org.acme.spring.data.jpa.FruitResource\" \\\n"
 "    -Dpath=\"/greeting\" \\\n"
-"    -Dextensions=\"spring-data-jpa,resteasy-jackson,quarkus-jdbc-"
+"    -Dextensions=\"resteasy,spring-data-jpa,resteasy-jackson,quarkus-jdbc-"
 "postgresql\"\n"
 "cd spring-data-jpa-quickstart\n"
 msgstr ""
