--- a/i18n/po/ja_JP/_guides/spring-security.adoc.po
+++ b/i18n/po/ja_JP/_guides/spring-security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:08+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -149,7 +149,7 @@ msgid ""
 "    -DprojectArtifactId=spring-security-quickstart \\\n"
 "    -DclassName=\"org.acme.spring.security.GreetingController\" \\\n"
 "    -Dpath=\"/greeting\" \\\n"
-"    -Dextensions=\"spring-web, spring-security, quarkus-elytron-security-"
+"    -Dextensions=\"spring-web,spring-security,quarkus-elytron-security-"
 "properties-file\"\n"
 "cd spring-security-quickstart\n"
 msgstr ""
@@ -179,8 +179,8 @@ msgstr ""
 #: upstream/_guides/spring-security.adoc:60
 #, no-wrap
 msgid ""
-"./mvnw quarkus:add-extension -Dextensions=\"spring-web, spring-security, "
-"quarkus-elytron-security-properties-file\"\n"
+"./mvnw quarkus:add-extension -Dextensions=\"spring-web,spring-"
+"security,quarkus-elytron-security-properties-file\"\n"
 msgstr ""
 
 #. type: Plain text
