--- a/i18n/po/ja_JP/_generated-config/config/quarkus-resteasy-reactive.adoc.po
+++ b/i18n/po/ja_JP/_generated-config/config/quarkus-resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:06+0000\n"
+"POT-Creation-Date: 2021-01-27 17:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,14 +28,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\n"
-"h|[[quarkus-resteasy-reactive_configuration]]link:#quarkus-resteasy-reactive_configuration[Configuration "
-"property]\n"
+"h|[[quarkus-resteasy-reactive_configuration]]link:#quarkus-resteasy-reactive_configuration[Configuration property]\n"
 "\n"
 "h|Type\n"
 "h|Default\n"
 "\n"
-"a|icon:lock[title=Fixed at build time] "
-"[[quarkus-resteasy-reactive_quarkus.rest.input-buffer-size]]`link:#quarkus-resteasy-reactive_quarkus.rest.input-buffer-size[quarkus.rest.input-buffer-size]`\n"
+"a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-reactive_quarkus.rest.input-buffer-size]]`link:#quarkus-resteasy-reactive_quarkus.rest.input-buffer-size[quarkus.rest.input-buffer-size]`\n"
 "\n"
 msgstr ""
 
@@ -43,10 +41,11 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:22
 msgid ""
 "The amount of memory that can be used to buffer input before switching to "
-"blocking IO.  --|MemorySize "
-"link:#memory-size-note-anchor[icon:question-circle[], title=More information "
-"about the MemorySize format] |`10k` a|icon:lock[title=Fixed at build time] "
-"[[quarkus-resteasy-reactive_quarkus.rest.single-default-produces]]`link:#quarkus-resteasy-reactive_quarkus.rest.single-default-produces[quarkus.rest.single-default-produces]`"
+"blocking IO.  --|MemorySize link:#memory-size-note-anchor[icon:question-"
+"circle[], title=More information about the MemorySize format] |`10k` a|icon:"
+"lock[title=Fixed at build time] [[quarkus-resteasy-reactive_quarkus.rest."
+"single-default-produces]]`link:#quarkus-resteasy-reactive_quarkus.rest."
+"single-default-produces[quarkus.rest.single-default-produces]`"
 msgstr ""
 
 #. type: Table
@@ -56,28 +55,39 @@ msgid ""
 "String endpoint return types. If this is disabled, the default produced "
 "media type will be \"++[++text/plain, ++*++/++*]++\" which is more expensive "
 "due to negotiation.  --|boolean |`true` a|icon:lock[title=Fixed at build "
-"time] "
-"[[quarkus-resteasy-reactive_quarkus.rest.default-produces]]`link:#quarkus-resteasy-reactive_quarkus.rest.default-produces[quarkus.rest.default-produces]`"
+"time] [[quarkus-resteasy-reactive_quarkus.rest.default-produces]]`link:"
+"#quarkus-resteasy-reactive_quarkus.rest.default-produces[quarkus.rest."
+"default-produces]`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:37
+#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:40
 msgid ""
-"When one of the quarkus-resteasy-reactive-jackson or "
-"quarkus-resteasy-reactive-jsonb extension are active and the result type of "
-"an endpoint is an application class or one of `Collection`, `List`, `Set` or "
-"`Map`, we assume the default return type is \"application/json\" if this "
-"configuration is enabled.  --|boolean |`true`"
+"When one of the quarkus-resteasy-reactive-jackson or quarkus-resteasy-"
+"reactive-jsonb extension are active and the result type of an endpoint is an "
+"application class or one of `Collection`, `List`, `Set` or `Map`, we assume "
+"the default return type is \"application/json\" if this configuration is "
+"enabled.  --|boolean |`true` a|icon:lock[title=Fixed at build time] "
+"[[quarkus-resteasy-reactive_quarkus.security.jaxrs.deny-unannotated-"
+"endpoints]]`link:#quarkus-resteasy-reactive_quarkus.security.jaxrs.deny-"
+"unannotated-endpoints[quarkus.security.jaxrs.deny-unannotated-endpoints]`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:46
+msgid ""
+"if set to true, access to all JAX-RS resources will be denied by default --|"
+"boolean |`false`"
 msgstr ""
 
 #. type: Block title
-#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:40
+#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:49
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:44
+#: upstream/_generated-config/config/quarkus-resteasy-reactive.adoc:53
 msgid ""
 "A size configuration option recognises string in this format (shown as a "
 "regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, "
