--- a/i18n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/i18n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:08+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -192,7 +192,7 @@ msgid ""
 "    -DprojectArtifactId=elasticsearch-quickstart \\\n"
 "    -DclassName=\"org.acme.elasticsearch.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy-jackson,elasticsearch-rest-client\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson,elasticsearch-rest-client\"\n"
 "cd elasticsearch-quickstart\n"
 msgstr ""
 
