--- a/i18n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/i18n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -641,7 +641,7 @@ msgid ""
 "mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=kafka-streams-quickstart-aggregator \\\n"
-"    -Dextensions=\"kafka-streams,resteasy-jackson\" \\\n"
+"    -Dextensions=\"resteasy,kafka-streams,resteasy-jackson\" \\\n"
 "    -DnoExamples \\\n"
 "    && mv kafka-streams-quickstart-aggregator aggregator\n"
 msgstr ""
