--- a/i18n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/i18n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -204,7 +204,7 @@ msgid ""
 "    -DprojectArtifactId=mongodb-panache-quickstart \\\n"
 "    -DclassName=\"org.acme.mongodb.panache.PersonResource\" \\\n"
 "    -Dpath=\"/persons\" \\\n"
-"    -Dextensions=\"resteasy-jackson,mongodb-panache\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson,mongodb-panache\"\n"
 "cd mongodb-panache-quickstart\n"
 msgstr ""
 
