--- a/i18n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/i18n/po/ja_JP/_guides/neo4j.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -399,7 +399,7 @@ msgid ""
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=neo4j-quickstart \\\n"
 "    -DclassName=\"org.acme.datasource.GreetingResource\" \\\n"
-"    -Dextensions=\"neo4j,resteasy-jackson\"\n"
+"    -Dextensions=\"resteasy,neo4j,resteasy-jackson\"\n"
 "cd neo4j-quickstart\n"
 msgstr ""
 
