--- a/i18n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/i18n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -147,7 +147,7 @@ msgid ""
 "    -DprojectArtifactId=openapi-swaggerui-quickstart \\\n"
 "    -DclassName=\"org.acme.openapi.swaggerui.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy-jackson\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson\"\n"
 "cd openapi-swaggerui-quickstart\n"
 msgstr ""
 
