--- a/i18n/po/ja_JP/_guides/quartz.adoc.po
+++ b/i18n/po/ja_JP/_guides/quartz.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:08+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -160,8 +160,8 @@ msgid ""
 "    -DprojectArtifactId=quartz-quickstart \\\n"
 "    -DclassName=\"org.acme.quartz.TaskResource\" \\\n"
 "    -Dpath=\"/tasks\" \\\n"
-"    -Dextensions=\"quartz,hibernate-orm-panache,flyway,resteasy-jackson,jdbc-"
-"postgresql\"\n"
+"    -Dextensions=\"resteasy,quartz,hibernate-orm-panache,flyway,resteasy-"
+"jackson,jdbc-postgresql\"\n"
 "cd quartz-quickstart\n"
 msgstr ""
 
