--- a/i18n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/i18n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-20 11:07+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -133,7 +133,7 @@ msgid ""
 "    -DprojectArtifactId=spring-boot-properties-quickstart \\\n"
 "    -DclassName=\"org.acme.spring.boot.properties.GreetingResource\" \\\n"
 "    -Dpath=\"/greeting\" \\\n"
-"    -Dextensions=\"spring-boot-properties\"\n"
+"    -Dextensions=\"resteasy,spring-boot-properties\"\n"
 "cd spring-boot-properties-quickstart\n"
 msgstr ""
 
