--- a/i18n/po/ja_JP/_guides/validation.adoc.po
+++ b/i18n/po/ja_JP/_guides/validation.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-01-15 15:29+0000\n"
+"POT-Creation-Date: 2021-01-27 17:23+0000\n"
 "PO-Revision-Date: 2021-01-15 23:08+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -150,7 +150,7 @@ msgid ""
 "    -DprojectArtifactId=validation-quickstart \\\n"
 "    -DclassName=\"org.acme.validation.BookResource\" \\\n"
 "    -Dpath=\"/books\" \\\n"
-"    -Dextensions=\"resteasy-jackson, hibernate-validator\"\n"
+"    -Dextensions=\"resteasy,resteasy-jackson,hibernate-validator\"\n"
 "cd validation-quickstart\n"
 msgstr ""
 
