update po files

--- a/i18n/po/ja_JP/get-started.md.po
+++ b/i18n/po/ja_JP/get-started.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:07+0900\n"
+"POT-Creation-Date: 2021-02-05 04:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,14 +16,25 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: Plain text
-#: upstream/get-started.md:5
+#. type: YAML Front Matter: layout
+#: upstream/get-started.md:1
+#, fuzzy, no-wrap
+#| msgid "Getting Started"
+msgid "get-started"
+msgstr "はじめに"
+
+#. type: YAML Front Matter: permalink
+#: upstream/get-started.md:1
 #, no-wrap
-msgid ""
-"layout: get-started\n"
-"title: Quarkus - Get Started\n"
-"permalink: /get-started/\n"
+msgid "/get-started/"
 msgstr ""
+
+#. type: YAML Front Matter: title
+#: upstream/get-started.md:1
+#, fuzzy, no-wrap
+#| msgid "Getting Started"
+msgid "Quarkus - Get Started"
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/get-started.md:8
@@ -45,27 +56,38 @@ msgstr "はじめに"
 
 #. type: Bullet: ' - '
 #: upstream/get-started.md:16
-msgid "[Be Guided Through First Application]({{site.baseurl}}/guides/getting-started)"
+#, fuzzy, no-wrap
+#| msgid ""
+#| "This guide requires:\n"
+#| "- Completion of the [Creating Your First Application]({{site.baseurl}}/guides/getting-started) guide\n"
+msgid "[Be Guided Through First Application]({{site.baseurl}}/guides/getting-started)\n"
+msgstr ""
+"このガイドは以下を必要とします:\n"
+"- [最初のアプリケーションの作成]({{site.baseurl}}/guides/getting-started) ガイドの完了\n"
+
+#. type: Bullet: ' - '
+#: upstream/get-started.md:16
+#, no-wrap
+msgid "[Getting Started with Reactive]({{site.baseurl}}/guides/getting-started-reactive)\n"
 msgstr ""
 
 #. type: Bullet: ' - '
 #: upstream/get-started.md:16
-msgid "[Getting Started with Reactive]({{site.baseurl}}/guides/getting-started-reactive)"
+#, fuzzy, no-wrap
+#| msgid "Quickly Bootstrap Your Application"
+msgid "[Quickly Bootstrap Your Application](https://code.quarkus.io)\n"
+msgstr "アプリケーションのクイック起動"
+
+#. type: Bullet: ' - '
+#: upstream/get-started.md:16
+#, no-wrap
+msgid "[Building Native Executables]({{site.baseurl}}/guides/building-native-image)\n"
 msgstr ""
 
 #. type: Bullet: ' - '
 #: upstream/get-started.md:16
-msgid "[Quickly Bootstrap Your Application](https://code.quarkus.io)"
-msgstr ""
-
-#. type: Bullet: ' - '
-#: upstream/get-started.md:16
-msgid "[Building Native Executables]({{site.baseurl}}/guides/building-native-image)"
-msgstr ""
-
-#. type: Bullet: ' - '
-#: upstream/get-started.md:16
-msgid "[Using our Tooling]({{site.baseurl}}/guides/tooling)"
+#, no-wrap
+msgid "[Using our Tooling]({{site.baseurl}}/guides/tooling)\n"
 msgstr ""
 
 #. type: Title ###
@@ -76,7 +98,8 @@ msgstr "ガイド"
 
 #. type: Bullet: ' - '
 #: upstream/get-started.md:20
-msgid "[Get More Guides]({{site.baseurl}}/guides)"
+#, no-wrap
+msgid "[Get More Guides]({{site.baseurl}}/guides)\n"
 msgstr ""
 
 #. type: Plain text
@@ -150,32 +173,43 @@ msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "A quick glance at the Quarkus engine and how it enables reactive"
+#, no-wrap
+msgid "A quick glance at the Quarkus engine and how it enables reactive\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "A brief introduction to Mutiny - the reactive programming library used by Quarkus"
+#, fuzzy, no-wrap
+#| msgid "A brief introduction to Mutiny - the reactive programming library used by Quarkus"
+msgid "A brief introduction to Mutiny - the reactive programming library used by Quarkus\n"
 msgstr "概説Mutiny - Quarkusによって使用されているリアクティブプログラミングライブラリ"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "Bootstrapping a reactive application"
-msgstr ""
+#, fuzzy, no-wrap
+#| msgid "Quickly Bootstrap Your Application"
+msgid "Bootstrapping a reactive application\n"
+msgstr "アプリケーションのクイック起動"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "Creating a reactive JAX-RS endpoint (asynchronous, streams...)"
+#, fuzzy, no-wrap
+#| msgid "Creating a reactive JAX-RS endpoint (asynchronous, streams...)"
+msgid "Creating a reactive JAX-RS endpoint (asynchronous, streams...)\n"
 msgstr "JAX-RSエンドポイントの作成（非同期、ストリーム...）"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "Using reactive database access"
+#, fuzzy, no-wrap
+#| msgid "Using reactive database access"
+msgid "Using reactive database access\n"
 msgstr "リアクティブデータベースアクセス"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:48
-msgid "Interacting with other reactive APIs"
+#, fuzzy, no-wrap
+#| msgid "Interacting with other reactive APIs"
+msgid "Interacting with other reactive APIs\n"
 msgstr "その他のリアクティブAPIの使用"
 
 #. type: Plain text
@@ -270,43 +304,54 @@ msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to use Maven as a build tool"
+#, no-wrap
+msgid "how to use Maven as a build tool\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to use Gradle as a build tool"
+#, no-wrap
+msgid "how to use Gradle as a build tool\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to use the native CLI for your toolchain (coming soon)"
+#, fuzzy, no-wrap
+#| msgid "how to use the native CLI for your toolchain (coming soon)"
+msgid "how to use the native CLI for your toolchain (coming soon)\n"
 msgstr "ツールチェインにネイティブCLIを使用する方法（近日公開）"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to create and scaffold a new project"
+#, no-wrap
+msgid "how to create and scaffold a new project\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to deal with extensions"
+#, no-wrap
+msgid "how to deal with extensions\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to enable live reload"
+#, no-wrap
+msgid "how to enable live reload\n"
 msgstr ""
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to develop your application in your IDE"
+#, fuzzy, no-wrap
+#| msgid "how to develop your application in your IDE"
+msgid "how to develop your application in your IDE\n"
 msgstr "IDEでアプリケーションを開発する方法"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-msgid "how to compile your application natively"
-msgstr ""
+#, fuzzy, no-wrap
+#| msgid "how to develop your application in your IDE"
+msgid "how to compile your application natively\n"
+msgstr "IDEでアプリケーションを開発する方法"
 
 #. type: Plain text
 #: upstream/get-started.md:92
