--- a/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/newsletter.md.po
+++ b/i18n/po/ja_JP/.github/ISSUE_TEMPLATE/newsletter.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:07+0900\n"
+"POT-Creation-Date: 2021-02-05 04:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,15 +16,22 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. type: Plain text
-#: upstream/.github/ISSUE_TEMPLATE/newsletter.md:7
+#. type: YAML Front Matter: about
+#: upstream/.github/ISSUE_TEMPLATE/newsletter.md:1
 #, no-wrap
-msgid ""
-"name: Newsletter\n"
-"about: Suggest a newsletter entry\n"
-"title: ''\n"
-"labels: publication\n"
-"assignees: ''\n"
+msgid "Suggest a newsletter entry"
+msgstr ""
+
+#. type: YAML Front Matter: labels
+#: upstream/.github/ISSUE_TEMPLATE/newsletter.md:1
+#, no-wrap
+msgid "publication"
+msgstr ""
+
+#. type: YAML Front Matter: name
+#: upstream/.github/ISSUE_TEMPLATE/newsletter.md:1
+#, no-wrap
+msgid "Newsletter"
 msgstr ""
 
 #. type: Title ##
@@ -47,5 +54,15 @@ msgstr ""
 
 #. type: Bullet: '- '
 #: upstream/.github/ISSUE_TEMPLATE/newsletter.md:15
-msgid "id: someuniqueid type: article title: \"<title>\" url: \"<url>\" date: \"<publishing date>\" author: \"<author>\" affiliation: \"<org/company>\" note: \"<your note/comment on the story\" urldate: \"<date added>\""
+#, no-wrap
+msgid ""
+"id: someuniqueid\n"
+"type: article\n"
+"title: \"<title>\"\n"
+"url: \"<url>\"\n"
+"date: \"<publishing date>\"\n"
+"author: \"<author>\"\n"
+"affiliation: \"<org/company>\"\n"
+"note: \"<your note/comment on the story\"\n"
+"urldate: \"<date added>\"\n"
 msgstr ""
